crates/swarm-abm-derive/tests/ui/bad_variant_unit.rs
use swarm_abm_derive::MultiAgent;

#[derive(MultiAgent)]
enum Bad {
    Foo,
}

fn main() {}
